--- a/native/package.json
+++ b/native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heyprofessor",
+  "name": "youwise-native",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -9,9 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint",
-    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
-    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
+    "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo"
@@ -20,15 +18,20 @@
     "@codeherence/react-native-header": "^0.12.2",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native/metro-config": "^0.74.84",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.14",
+    "expo-apple-authentication": "~6.4.1",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.7",
+    "expo-haptics": "~13.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -48,16 +51,19 @@
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.8.6",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwind-rn": "^4.2.0",
     "uuid": "^10.0.0",
-    "expo-haptics": "~13.0.1"
+    "youwise-shared": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "concurrently": "^8.2.2",
     "jest": "^29.2.1",
