--- a/next/package.json
+++ b/next/package.json
@@ -7,12 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:migrate": "prisma migrate dev --schema=../prisma-client/prisma/schema.prisma",
-    "prisma:generate": "npx prisma generate --schema=../shared/prisma/schema.prisma"
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@mozilla/readability": "^0.5.0",
     "@prisma/client": "^5.16.2",
     "google-auth-library": "^9.11.0",
+    "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "openai": "^4.49.1",
@@ -24,6 +26,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
