--- a/shared/package.json
+++ b/shared/package.json
@@ -1,7 +1,14 @@
 {
   "name": "youwise-shared",
   "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "zod-generate": "npx ts-to-zod --all"
+  },
   "dependencies": {
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "ts-to-zod": "^3.9.1"
   }
 }
