Update specs + Fix prisma install

--- a/next/package.json
+++ b/next/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:generate": "npx prisma generate"
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
