--- a/native/package.json
+++ b/native/package.json
@@ -55,6 +55,7 @@
     "react-native-webview": "13.8.6",
     "react-native-youtube-iframe": "^2.3.0",
     "tailwind-rn": "^4.2.0",
+    "ts-fsrs": "^4.0.2",
     "uuid": "^10.0.0",
     "youwise-shared": "*"
   },
