--- a/next/package.json
+++ b/next/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
     "@prisma/client": "^5.16.2",
+    "dayjs": "^1.11.12",
     "google-auth-library": "^9.11.0",
     "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
