Add initial DB model + Make tRPC client works

--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@spec-central/api",
+  "name": "@youwise/api",
   "version": "1.0.0",
   "packageManager": "yarn@1.22.22",
   "main": "main/index.ts",
