--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "main/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "yarn migrate-all && yarn codegen && tsx watch main/index.ts",
+    "dev": "yarn migrate-all && yarn codegen && tsx watch --watch-preserve-output main/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node ./build/index.js",
     "codegen": "kysely-codegen --out-file ./database.d.ts",
@@ -16,11 +16,14 @@
     "@trpc/server": "^11.0.1",
     "common-js": "^0.3.8",
     "fastify": "^5.2.2",
+    "google-auth-library": "^9.15.1",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.28.2",
     "pg": "^8.14.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.17",
     "@types/pg": "^8.11.11",
     "fastify-cli": "^7.4.0",
