--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,7 +13,8 @@
       "bundleIdentifier": "com.mathiasbragagia.youwise",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
@@ -36,6 +37,14 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
+        }
+      ],
+      ["expo-secure-store", {}],
+      ["expo-apple-authentication"],
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.835524820983-nlqq9pme2t88rtjft5v2tu2c3j99d52o"
         }
       ]
     ],
