--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,15 +13,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.75.5",
+    "@tanstack/react-query-devtools": "^5.79.0",
     "@trpc/client": "^11.1.2",
     "@trpc/react": "^9.27.4",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
     "expo": "~53.0.5",
+    "expo-apple-authentication": "^7.2.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-dev-client": "~5.1.7",
@@ -31,6 +34,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.4",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
