--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint; tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "^1.6.0",
