--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint; tsc --noEmit"
   },
   "dependencies": {
-    "@youwise/shared": "1.0.0",
     "@google/genai": "^1.6.0",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -18,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@youwise/shared": "1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "epubjs": "^0.3.93",
@@ -25,6 +25,7 @@
     "langfuse": "^3.37.4",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "nextjs-basic-auth-middleware": "^3.1.0",
     "openai": "^5.6.0",
     "pg": "^8.16.2",
     "react": "^19.0.0",
