--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,10 +1,12 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2023",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "strict": true,
+    // "strictNullChecks": true,
     "resolveJsonModule": true,
     "removeComments": true,
     "newLine": "lf",
@@ -14,7 +16,13 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "lib": ["ESNext"],
-    "outDir": "./build"
+    "outDir": "./build",
+    "rootDir": ".",
+    "baseUrl": ".",
+
+    "paths": {
+      "@/*": ["./*"]
+    }
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
