--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youwise-mobile",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "packageManager": "yarn@1.22.22",
   "version": "1.0.0",
   "scripts": {
@@ -12,7 +12,6 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@youwise/shared": "1.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -24,32 +23,33 @@
     "@trpc/react": "^9.27.4",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
-    "expo": "~53.0.5",
-    "expo-apple-authentication": "^7.2.4",
-    "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.5",
-    "expo-dev-client": "~5.1.7",
-    "expo-font": "~13.3.0",
+    "@youwise/shared": "1.0.0",
+    "expo": "^53.0.19",
+    "expo-apple-authentication": "~7.2.4",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.4",
+    "expo-image": "~2.3.2",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
